--- a/package.json
+++ b/package.json
@@ -5,24 +5,32 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "bootstrap": "^4.4.1",
-    "gatsby": "^2.21.22",
-    "gatsby-image": "^2.4.3",
-    "gatsby-plugin-manifest": "^2.4.2",
-    "gatsby-plugin-offline": "^3.2.1",
-    "gatsby-plugin-react-helmet": "^3.3.1",
-    "gatsby-plugin-sass": "^2.3.1",
-    "gatsby-plugin-sharp": "^2.6.2",
-    "gatsby-source-filesystem": "^2.3.1",
-    "gatsby-transformer-sharp": "^2.5.2",
-    "jquery": "^3.5.1",
-    "node-sass": "^4.14.1",
-    "popper.js": "^1.16.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0",
-    "save": "^2.4.0"
+    "bootstrap": "4.4.1",
+    "color": "3.1.2",
+    "gatsby": "2.21.21",
+    "gatsby-background-image": "0.10.2",
+    "gatsby-image": "2.2.44",
+    "gatsby-plugin-google-analytics": "2.2.4",
+    "gatsby-plugin-manifest": "2.2.48",
+    "gatsby-plugin-mautic": "1.0.0",
+    "gatsby-plugin-offline": "3.0.41",
+    "gatsby-plugin-react-helmet": "3.1.24",
+    "gatsby-plugin-sass": "2.1.31",
+    "gatsby-plugin-sharp": "2.4.13",
+    "gatsby-source-filesystem": "2.1.56",
+    "gatsby-source-prismic-graphql": "3.6.2",
+    "gatsby-transformer-sharp": "2.3.19",
+    "jquery": "3.4.1",
+    "moment": "2.24.0",
+    "node-sass": "4.13.1",
+    "popper.js": "1.16.1",
+    "prismic-reactjs": "1.3.0",
+    "prop-types": "15.7.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-helmet": "5.2.1",
+    "react-moment": "0.9.7",
+    "react-sticky-box": "0.9.3"
   },
   "devDependencies": {
     "prettier": "2.0.5"
