--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-sass": "4.14.1",
     "popper.js": "1.16.1",
     "prismic-reactjs": "1.3.1",
+    "prismjs": "^1.20.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
