--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "2.26.0",
     "node-sass": "4.14.1",
     "popper.js": "1.16.1",
+    "postscribe": "^2.0.8",
     "prismic-reactjs": "1.3.1",
     "prismjs": "^1.20.0",
     "prop-types": "15.7.2",
