--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-sticky-box": "0.9.3"
   },
   "devDependencies": {
+    "babel-plugin-prismjs": "^2.0.1",
+    "babel-preset-gatsby": "^0.4.8",
     "prettier": "2.0.5"
   },
   "keywords": [
