--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet": "6.0.0",
+    "react-images": "^1.1.7",
     "react-moment": "0.9.7",
+    "react-photo-gallery": "^8.0.0",
     "react-sticky-box": "0.9.3"
   },
   "devDependencies": {
